[tool.poetry]
name = "999"
version = "0.1.0"
description = ""
authors = ["Cicada"]

[tool.poetry.dependencies]
python = "^3.9"
no-thanks = "^0.1.2"
PyYAML = "^5.4.1"
aiogram = "^2.14.3"
rich = "^10.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
